# AutoEq-pip313

./: pyproject.toml
autoeq/: batch_processing.py  frequency_response.py  peq.py
dbtools/: requirements.txt
